<resources>
    <string name="app_name">salary accounting</string>
    <string name="welcomeText">Повернення до свого шляху</string>
    <string name="startText">Почніть з реєстрації</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="checkPassword">Підтвердьте пароль</string>
    <string name="signUp">Зареєструватися</string>
    <string name="or">або</string>
    <string name="readyRegText">Вже маєшь аккаунт?</string>
    <string name="enter">Увійти</string>
    <string name="returnTextView">Повернення до свого шляху</string>
    <string name="noAccountTextView">Немає акаунту?</string>
    <string name="logInTextView">Зареєструватися</string>
    <string name="signInTextView">Увійти</string>
    <string name="forgetPasswordTextView">Забули пароль?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">Календар</string>
    <string name="shifts">Зміни</string>
    <string name="statistics">Статистика</string>
    <string name="calculator">Калькулятор</string>
    <string name="salaryText">Розрахунок зарплати</string>
    <string name="zeroText">0.0</string>
    <string name="hoursOfWeek">Годин на тиждень</string>
    <string name="daysOnWeeks">Днів на тиждень</string>
    <string name="salaryOfWeek">Розмір зарплати у місяць</string>
    <string name="calculateText">Розрахувати</string>
    <string name="reloadText">Оновити</string>
    <string name="salaryResultText">Результат</string>
    <string name="back">back</string>
    <string name="everyHour">Кожну годину</string>
    <string name="everyDay">Кожен день</string>
    <string name="everyWeek">Кожен тиждень</string>
    <string name="everyQuarter">Кожен квартал</string>
    <string name="everyYear">Річний</string>
</resources>