<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".auth.SignInFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="102dp"
        android:layout_height="46dp"
        android:layout_marginTop="@dimen/marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_verification" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/startText"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center"
        android:text="@string/startText"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/emailEditLayout"
        app:layout_constraintStart_toStartOf="@+id/emailEditLayout"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/margin_medium"
        android:hint="@string/email"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:inputType="textEmailAddress"
            android:textColor="@color/darkBeige" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:hint="@string/password"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/emailEditLayout"
        app:layout_constraintStart_toStartOf="@+id/emailEditLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailEditLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:inputType="textPassword"
            android:textColor="@color/darkBeige" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/checkPasswordLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:hint="@string/checkPassword"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/checkPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:inputType="textPassword"
            android:textColor="@color/darkBeige"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enterButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="@dimen/marginTop"
        android:background="@drawable/enter_button"
        android:text="@string/signUp"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintEnd_toEndOf="@+id/checkPasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/checkPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/checkPasswordLayout" />

    <LinearLayout
        android:id="@+id/lineLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/enterButton"
        app:layout_constraintStart_toStartOf="@+id/enterButton"
        app:layout_constraintTop_toBottomOf="@+id/enterButton">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/darkBeige" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:text="@string/or"
            android:textColor="@color/darkBeige"
            android:textSize="@dimen/textSizeSmall" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/darkBeige" />
    </LinearLayout>

    <com.arhizmei.salaryaccounting.ui.view.GoogleSignInButton
        android:id="@+id/btnGoogle"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="@dimen/marginTop"
        app:googleText="Sign in with Google"
        app:googleCornerRadius="14dp"
        app:googleIconSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/enterButton"
        app:layout_constraintStart_toStartOf="@+id/enterButton"
        app:layout_constraintTop_toBottomOf="@+id/lineLinear" />

    <LinearLayout
        android:id="@+id/bottomLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle">

        <TextView
            android:id="@+id/readyRegTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="@dimen/textSizeSmall"
            android:text="@string/readyRegText" />

        <TextView
            android:id="@+id/enterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textColor="@color/blue"
            android:textSize="@dimen/textSizeSmall"

            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>